# HaliteGameBot

./: .gitignore  CMakeLists.txt  CommandFactory.cs  GameMapGeometry.cs  GameMechanicsHelper.cs  HaliteGameBot.csproj  HaliteGameBot.sln  HaliteGameBot.vcxproj  HaliteGameBot.vcxproj.filters  MyBot.cpp  MyBot.cs  Program.cs  README.md  SearchManager.cs  SearchSettings.cs  Strategy.cs  make.bat  pch.h  run_game.bat
Framework/: Constants.cs  Direction.cs  DirectionUseCase.cs  Dropoff.cs  Entity.cs  Factory.cs  Game.cs  GameMap.cs  GameMapGeometryUseCase.cs  GameMapUpdate.cs  InputReader.cs  Log.cs  Player.cs  Position.cs  Ship.cs  Shipyard.cs
Framework/Commands/: BuildDropoffSite.cs  ICommand.cs  Move.cs  SpawnShip.cs
Properties/: AssemblyInfo.cs
Search/: GameAction.cs  GameActions.cs  GameMapState.cs  GameState.cs  Heap.cs  ISearchStats.cs  Node.cs  NodeByPriorityComparator.cs  PlayerState.cs  PriorityQueue.cs  Search.cs  SearchResults.cs  SearchStats.cs  Tree.cs
Search/Actors/: PlayerActor.cs  ShipActor.cs
Search/GameActions/: BaseShipAction.cs  IGameAction.cs  MoveX.cs  MoveY.cs  StayStill.cs
arena/: run_game.bat
hlt/: command.cpp  command.hpp  constants.cpp  constants.hpp  direction.hpp  dropoff.cpp  dropoff.hpp  entity.hpp  factory.cpp  factory.hpp  game.cpp  game.hpp  game_map.cpp  game_map.hpp  input.cpp  input.hpp  log.cpp  map_cell.hpp  player.cpp  player.hpp  ship.cpp  ship.hpp  shipyard.hpp  types.hpp
